# pyamrex

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CMakeLists.txt  CODE_OF_CONDUCT.rst  LICENSE  MANIFEST.in  README.md  pyAMReXConfig.cmake.in  pyproject.toml  requirements.txt  setup.py  spack.yaml
.github/: update_stub.sh
.github/ci/: vcvarsall.ps1
.github/codeql/: pyamrex-codeql.yml
.github/workflows/: ci.yml  cleanup-cache.yml  codeql.yml  hip.yml  intel.yml  linux.yml  macos.yml  stubs.yml  ubuntu.yml  windows.yml
.github/workflows/dependencies/: dependencies.sh  dependencies_ccache.sh  dependencies_clang14_libcpp.sh  dependencies_clang6.sh  dependencies_gcc10.sh  dependencies_mac.sh  dependencies_nvcc11.sh  documentation.sh  gcc7.sh  hip.sh
cmake/: pyAMReXFunctions.cmake
cmake/dependencies/: AMReX.cmake  nanobind.cmake  pybind11.cmake
docs/: Doxyfile  Makefile  README.md  requirements.txt  spack.yaml
docs/source/: acknowledge_us.rst  acknowledgements.rst  conf.py  glossary.rst  index.rst
docs/source/developers/: debugging.rst  documentation.rst  implementation.rst  repo_organization.rst  testing.rst
docs/source/install/: cmake.rst  dependencies.rst  users.rst
docs/source/maintenance/: release.rst
docs/source/usage/: api.rst  compute.rst  examples.rst  how_to_run.rst  workflows.rst  zerocopy.rst
src/: CMakeLists.txt  pyAMReX.H  pyAMReX.cpp
src/AmrCore/: AmrCore.cpp  AmrMesh.cpp  CMakeLists.txt
src/Base/: AMReX.cpp  Arena.cpp  Array4.H  Array4.cpp  Array4_complex.cpp  Array4_complex_const.cpp  Array4_float.cpp  Array4_float_const.cpp  Array4_int.cpp  Array4_int_const.cpp  Array4_uint.cpp  Array4_uint_const.cpp  BaseFab.cpp  Box.cpp  BoxArray.cpp  CMakeLists.txt  CoordSys.cpp  Dim3.cpp  DistributionMapping.cpp  FArrayBox.cpp  Geometry.cpp  IndexType.cpp  IntVect.cpp  Iterator.H  MPMD.cpp  MultiFab.cpp  PODVector.cpp  ParallelDescriptor.cpp  ParmParse.cpp  Periodicity.cpp  PlotFileUtil.cpp  RealBox.cpp  RealVect.cpp  TableData.cpp  Utility.cpp  Vector.H  Vector.cpp  Version.cpp
src/Particle/: ArrayOfStructs.H  ArrayOfStructs.cpp  CMakeLists.txt  Particle.H  Particle.cpp  ParticleContainer.H  ParticleContainer.cpp  ParticleContainer_FHDeX.cpp  ParticleContainer_HiPACE.cpp  ParticleContainer_ImpactX.cpp  ParticleContainer_WarpX.cpp  ParticleTile.H  ParticleTile.cpp  StructOfArrays.H  StructOfArrays.cpp
src/amrex/: Array4.py  ArrayOfStructs.py  MultiFab.py  PODVector.py  ParticleComponentNames.py  ParticleContainer.py  StructOfArrays.py  __init__.py
src/amrex/extensions/: Iterator.py  MultiFab.py  PODVector.py  ParticleComponentNames.py  ParticleContainer.py  StructOfArrays.py
src/amrex/space1d/: __init__.py  __init__.pyi
src/amrex/space1d/amrex_1d_pybind/: ParallelDescriptor.pyi  __init__.pyi
src/amrex/space2d/: __init__.py  __init__.pyi
src/amrex/space2d/amrex_2d_pybind/: __init__.pyi
src/amrex/space3d/: __init__.py  __init__.pyi
src/amrex/space3d/amrex_3d_pybind/: __init__.pyi
src/pyamrex/: __init__.py
tests/: conftest.py  parmparse_inputs  test_amrcore.py  test_aos.py  test_array4.py  test_basefab.py  test_box.py  test_coordsys.py  test_dim3.py  test_farraybox.py  test_geometry.py  test_indextype.py  test_intvect.py  test_multifab.py  test_parmparse.py  test_particle.py  test_particleContainer.py  test_particleTile.py  test_periodicity.py  test_plotfiledata.py  test_plotfileparticledata.py  test_podvector.py  test_realbox.py  test_realvect.py  test_soa.py  test_utility.py
tests/examples/: particle_container_examples.py  particle_tile_examples.py  soa_sandbox.py
tests/projz04000/: Header
tests/projz04000/Level_0/: Cell_H
tests/test_MPMD/: README.md  environment.yml
tests/test_MPMD/MultiFab/: GNUmakefile  main.cpp  main.py
tests/test_MPMD/MultiFab_cpp_py/: main.cpp  main.py
tests/test_MPMD/MultiFab_py_cpp/: main.cpp  main.py
tests/test_MPMD/MultiFab_two_way/: main.cpp  main.py
tests/test_MPMD/lammps_tests/bench/: .gitignore  main.py
tests/test_MPMD/mpi4py_Comm_C_Comm/: main.py
tests/test_MPMD/pytorch_tests/ddp_cpu/: GNUmakefile  main.py
tests/test_MPMD/test_1/: GNUmakefile  README.rst  main.cpp  main.py
tools/: plot_plotfile_2d.py
