[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.20.0,<4.0.0",
    "packaging>=23",
]
build-backend = "setuptools.build_meta"

[tool.flake8]
#ignore = ['E231', 'E241']
select = ['F', 'B']

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = ["E402", "E501"]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["amrex"]

[tool.isort]
known_first_party = ["amrex"]
profile = "black"
